--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -27,9 +27,9 @@ li{
   padding: 0;
 }
 body{
-  // font-family: 'Roboto-Regular', sans-serif;
-  // font-weight: 400;
-  // font-size: 15px;
+  font-family: 'Circe', sans-serif;
+  font-weight: bold;
+  font-size: 14px;
   line-height: 24px;
 }
 /* .wrapper{
