--- a/app/css/style.css
+++ b/app/css/style.css
@@ -49,6 +49,16 @@ body {
   margin: 0  auto;
   padding: 0 15px; }
 
+.container-fluid {
+  width: 100%;
+  padding: 0 15px; }
+  .container-fluid--style-r {
+    max-width: 1520px;
+    margin-left: auto; }
+  .container-fluid--style-l {
+    max-width: 1520px;
+    margin-right: auto; }
+
 /*header-top  */
 .header-top {
   padding: 20px 0; }
@@ -141,7 +151,7 @@ body {
 .header__box {
   max-width: 550px;
   width: 100%;
-  margin-left: 100px; }
+  z-index: 1; }
   .header__box .header__title {
     font-family: 'Roboto Slab', serif;
     font-size: 57px;
@@ -182,9 +192,117 @@ body {
 .header__box-img {
   background-image: url(../images/bg/header_foto_bg.png);
   background-repeat: no-repeat;
-  background-position: right center;
-  background-size: content;
+  background-position: right bottom;
+  background-size: contain;
+  max-width: 1050px;
+  min-width: 790px;
   width: 100%;
   height: 685px; }
 
+.header__box-img {
+  max-width: 1050px;
+  width: 100%; }
+
 /* header-end */
+/* consultation */
+.consultation {
+  min-height: 580px;
+  background: #f2fbf7;
+  background: -o-linear-gradient(45deg, #f2fbf7 0%, #f5fcf9 38%, #ffffff 55%);
+  background: linear-gradient(45deg, #f2fbf7 0%, #f5fcf9 38%, #ffffff 55%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2fbf7', endColorstr='#ffffff',GradientType=1 ); }
+
+.consultation__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center; }
+
+.l-foto {
+  background-image: url(../images/bg/foto_child.png);
+  background-repeat: no-repeat;
+  background-position: left bottom;
+  max-width: 665px;
+  width: 100%;
+  min-height: 580px; }
+
+.consultation-bl-right {
+  position: absolute;
+  right: 150px; }
+
+.consultation-textWrap {
+  padding: 0 35px 60px;
+  background-image: url(../images/icon/line.png);
+  background-repeat: repeat-x;
+  background-position: bottom;
+  margin-bottom: 55px; }
+
+.consultation__title {
+  font-family: 'Roboto Slab', serif;
+  font-size: 30px;
+  font-weight: bold;
+  margin-bottom: 25px; }
+
+.consultation__subtitle {
+  font-size: 22px;
+  line-height: 27px; }
+
+.form-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 38px; }
+
+.form__info {
+  font-size: 16px;
+  line-height: 27px;
+  font-weight: 300;
+  text-align: center;
+  margin-bottom: 35px; }
+
+.form input {
+  padding: 18px 115px 18px 60px;
+  margin-right: 30px;
+  border: 1px solid #D1D1D1;
+  border-radius: 30px; }
+  .form input::-webkit-input-placeholder {
+    color: #D1D1D1;
+    font-size: 15px;
+    font-weight: 300; }
+  .form input::-moz-placeholder {
+    color: #D1D1D1;
+    font-size: 15px;
+    font-weight: 300; }
+  .form input:-ms-input-placeholder {
+    color: #D1D1D1;
+    font-size: 15px;
+    font-weight: 300; }
+  .form input::-ms-input-placeholder {
+    color: #D1D1D1;
+    font-size: 15px;
+    font-weight: 300; }
+  .form input::placeholder {
+    color: #D1D1D1;
+    font-size: 15px;
+    font-weight: 300; }
+
+.form .btn {
+  text-align: center;
+  background-color: #F8AE00;
+  color: #fff;
+  border: none; }
+
+.form__phone {
+  text-align: center;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 300; }
+  .form__phone span {
+    font-family: 'Roboto Slab', serif;
+    font-size: 20px;
+    line-height: 27px;
+    padding-left: 30px; }
+
+/* consultation-end */
