--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -79,7 +79,9 @@
 	.header__box{
 		max-width: 550px;
 		width: 100%;
-		margin-left: 100px;
+		z-index: 1;
+
+		// margin-left: 100px;
 		
 		.header__title{
 			font-family: 'Roboto Slab', serif;
@@ -114,18 +116,114 @@
         	line-height: 20px;
         }
 	}
-	.header__box-img{
+	 .header__box-img{
 		background-image: url(../images/bg/header_foto_bg.png);
 		background-repeat: no-repeat;
-		background-position: right center;
-        background-size: content;
+		background-position: right bottom;
+        background-size: contain;
+        // min-width: 1050px;
+        max-width: 1050px;
+        min-width: 790px;
         width: 100%;
         height: 685px;
-	}
+        // position: absolute;
+	    // top: 85px;
+	    // right: 0;
+	} 
 
-	 
+	 .header__box-img{
+		max-width: 1050px;
+		width: 100%;
+	 	
+	 }
 /* header-end */
 
+/* consultation */
+.consultation{
+	min-height: 580px;
+	background: #f2fbf7;
+	background: -moz-linear-gradient(45deg, #f2fbf7 0%, #f5fcf9 38%, #ffffff 55%);
+	background: -webkit-linear-gradient(45deg, #f2fbf7 0%,#f5fcf9 38%,#ffffff 55%);
+	background: linear-gradient(45deg, #f2fbf7 0%,#f5fcf9 38%,#ffffff 55%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2fbf7', endColorstr='#ffffff',GradientType=1 );
+}
+.consultation__inner{
+	display: flex;
+    align-items: center;
+}
+.l-foto{
+	background-image: url(../images/bg/foto_child.png);
+	background-repeat: no-repeat;
+	background-position: left bottom;
+	max-width: 665px;
+	width: 100%;
+	min-height: 580px;
+}
+.consultation-bl-right{
+	position: absolute;
+    right: 150px;
+}
+.consultation-textWrap{
+	padding: 0 35px 60px;
+	background-image: url(../images/icon/line.png);
+	background-repeat: repeat-x;
+	background-position: bottom;
+	margin-bottom: 55px;
+}
+.consultation__title{
+	font-family: 'Roboto Slab', serif;
+	font-size: 30px;
+	font-weight: bold;
+	margin-bottom: 25px;
+}
+.consultation__subtitle{
+	font-size: 22px;
+	line-height: 27px;
+}
+.form-wrap{
+	display: flex;
+	margin-bottom: 38px;
+}
+.form__info{
+	font-size: 16px;
+	line-height: 27px;
+	font-weight: 300;
+	text-align: center;
+	margin-bottom: 35px;
+}
+
+.form input{
+	padding: 18px 115px 18px 60px;
+	margin-right: 30px;
+	border: 1px solid #D1D1D1;
+    border-radius: 30px;
+    
+    &::placeholder{
+    	color: #D1D1D1;
+    	font-size: 15px;
+    	font-weight: 300;
+    }
+}
+.form .btn{
+	text-align: center;
+	background-color: #F8AE00;
+	color: #fff;
+	border: none;
+}
+.form__phone{
+	text-align: center;
+	font-size: 16px;
+	line-height: 20px;
+	font-weight: 300;
+	
+	span{
+		font-family: 'Roboto Slab', serif;
+		font-size: 20px;
+		line-height: 27px;
+		padding-left: 30px;
+	}
+}
+/* consultation-end */
  
 
 //media
